# pyCAERdynapse

./: authors.txt  setup.py
opt/netparser/: CMakeLists.txt  Neuron.cpp  Neuron.h  README.md  netparser.cpp  test_netparser.cpp  testcaer.h
opt/netparser/networks/: errors_test.txt  hellobias.txt  hellonet.txt  hellonet.xml  hellonet2.txt  hellotau.txt  mapping_table  netGeneratorTXT.py  netGeneratorXML.py
scripts/: caer-config.xml  run_davis240.py
src/pyCAER/: __init__.py  caer_communication.py  client.py  maputils.py  utils.py
src/pyCAER/api/: com_aextcpclient.py  com_tcpclient.py  conf_nettcpclient.py  conf_tcpclient.py  mapconf_cxquad.py  mapconf_ioclient.py  mapconf_tcpclient.py
src/pyCAER/stimulators/: __init__.py  periodic.py
